task 2 chai vs mocha

--- a/0x06-unittests_in_js/package.json
+++ b/0x06-unittests_in_js/package.json
@@ -10,9 +10,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "chai": "^5.1.1",
     "mocha": "^10.7.3"
-  },
-  "dependencies": {
-    "chai": "^5.1.1"
   }
 }
